--- a/style.css
+++ b/style.css
@@ -14,6 +14,16 @@ header {
 }
 a {
 	margin: auto;
+	color: black;
+	text-decoration: none !important;
+}
+a:hover {
+	color: rgba(90, 90, 90, 1);
+}
+p {
+	padding: 0;
+	margin: 0;
+	display: inline-block;
 }
 img {
 	height: 5em;
@@ -33,6 +43,11 @@ li {
 #input {
 	margin: auto;
 	background: rgba(231, 231, 231, 1);
+}
+@media screen and (max-width: 500px) {
+	#input {
+		padding-right: 13%;
+	}
 }
 #input::placeholder {
 	color: rgba(0,0,0,0.3);
@@ -65,38 +80,111 @@ li {
 .dropdowns {
 	height: 58px;
 }
-@media screen and (max-width: 500px) {
-	.dropdowns {
-		height: auto;
-		justify-content: space-between;
-	}
-}
 .dropdown {
 	margin: auto 1% auto 0;
 }
+.dropdown-toggle::after {
+		margin: auto 0;
+	}
+@media screen and (max-width: 500px) {
+	.dropdown {
+		width: 25%;
+		margin: auto 1%;
+	}
+	.dropdown button {
+		width: 100%;
+	}
+	.dropdown button p {
+		width: 50%;
+		overflow: auto;
+	}
+}
+.dropdown input {
+	width: 50%;
+	margin-left: 2%;
+	border-style: hidden;
+	color: rgba(230, 230, 230, 0.8);
+}
+.dropdown input::placeholder {
+	color: rgba(230, 230, 230, 0.8);
+}
+.dropdown input:focus {
+	outline: none;
+}
+.dropdown-menu {
+	transform: translate3d(0) !important;
+	top: 0;
+}
 #containerIngredient {
-	width: 600px;
-	height: 500px;
+	width: 800px;
+	height: 480px;
 	padding: 10px 20px;
-	flex-direction: column;
+	flex-wrap: wrap;
 	overflow: auto;
 	color: white;
+}
+#containerIngredient p {
+	width: 33%;
+}
+@media screen and (max-width: 768px) {
+	#containerIngredient {
+		width: 100%;
+		height: 480px;
+		flex-direction: column;
+		flex-wrap: nowrap;
+		overflow: auto;
+	}
+	#containerIngredient p {
+	width: auto;
+	margin: 5px 0;
+	}
 }
 #containerAppliance {
-	width: 600px;
-	height: 500px;
+	width: 800px;
+	height: 220px;
 	padding: 10px 20px;
-	flex-direction: column;
+	flex-wrap: wrap;
 	overflow: auto;
 	color: white;
 }
+#containerAppliance p {
+	width: 33%;
+}
+@media screen and (max-width: 768px) {
+	#containerAppliance {
+		width: 100%;
+		height: auto;
+		flex-direction: column;
+		flex-wrap: nowrap;
+		overflow: auto;
+	}
+	#containerAppliance p {
+	width: auto;
+	margin: 5px 0;
+	}
+}
 #containerUstensil {
-	width: 600px;
-	height: 500px;
+	width: 800px;
+	height: 300px;
 	padding: 10px 20px;
-	flex-direction: column;
+	flex-wrap: wrap;
 	overflow: auto;
 	color: white;
+}
+#containerUstensil p {
+	width: 33%;
+}
+@media screen and (max-width: 768px) {
+	#containerUstensil {
+		width: 100%;
+		height: 480px;
+		flex-direction: column;
+		flex-wrap: nowrap;
+	}
+	#containerUstensil p {
+	width: auto;
+	margin: 5px 0;
+	}
 }
 #containerCards {
 	flex-wrap: wrap;
@@ -120,10 +208,16 @@ li {
 		margin-bottom: 25px;
 	}
 }
+@media screen and (min-width: 500px) and (max-width: 1024px) {
+	.card {
+		width: 46%;
+		margin-bottom: 25px;
+	}
+}
 .upCard {
 	height: 49%;
 	width: 100%;
-	background: rgba(199, 190, 190, 1);;
+	background: rgba(199, 190, 190, 1);
 }
 .downCard {
 	height: 51%;
@@ -153,6 +247,44 @@ li {
 	height: 85px;
 	text-align: justify;
 	overflow: hidden;
+}
+.upBigCard {
+	height: 300px;
+	width: 100%;
+	background: rgba(199, 190, 190, 1);
+}
+.titleBigCardAndTime {
+	position: relative;
+	margin: 50px 0;
+}
+.titleBigCardAndTime h1 {
+	font-size: 2.8em;
+	margin: auto;
+}
+@media screen and (max-width: 768px) {
+	.titleBigCardAndTime h1 {
+		font-size: 1.9em;
+		margin: 0;
+	}
+}
+.timeBigCard {
+	position: absolute;
+	right: 0px;
+	width: 9.5%;
+	justify-content: space-between;
+	font-size: 1.7em;
+}
+@media screen and (max-width: 768px) {
+	.timeBigCard {
+		width: 19%;
+		font-size: 1em;
+	}
+}
+.ingredientsOfBigCard {
+	margin: 50px 0;
+}
+.descriptionOfBigCard {
+	margin: 50px 0;
 }
 
 
